--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/goit-js-hw-09/",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d src"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "glob": "^11.0.1",
     "postcss": "^8.4.41",
     "postcss-sort-media-queries": "^5.2.0",
@@ -21,4 +23,7 @@
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
+
+  
+
 }
